pass configuration to restore task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ stages:
         includeNuGetOrg: true
         noCache: false
         verbosityRestore: 'normal'
+        arguments: '-c Release'
 
     - task: DotNetCoreCLI@2
       displayName: 'Build solution'
