--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <LangVersion>9.0</LangVersion>
+    <!-- <Nullable>enable</Nullable> -->
+    <AssemblyName>Bcan.Backend.WebApi</AssemblyName>
+    <RootNamespace>Bcan.Backend.WebApi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
