Configure against auth changes

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AzureAdB2C": {
+    "Instance": "https://bcazureplayground.b2clogin.com/",
+    "ClientId": "d1158631-b5f5-47c2-a5cc-85bb9c8766a0",
+    "TenantId": "e613cd86-612a-40a9-95ea-77462cf329aa",
+    "Domain": "bcazureplayground.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_susi"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
