Add connection strings to appsettings file

--- a/src/WebApi/appsettings.Development.json
+++ b/src/WebApi/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "AppDbConnection": "Server=.;Database=appdb;Trusted_Connection=True;",
+    "AuthDbConnection": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
