--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -6,6 +6,10 @@
     "Domain": "bcazureplayground.onmicrosoft.com",
     "SignUpSignInPolicyId": "B2C_1_susi"
   },
+  "ConnectionStrings": {
+    "AppDbConnection": "",
+    "AuthDbConnection": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
