Add Testhelpers project to test projects as reference

--- a/tests/Core.UnitTests/Core.UnitTests.csproj
+++ b/tests/Core.UnitTests/Core.UnitTests.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Core\Core.csproj" />
+    <ProjectReference Include="..\TestHelpers\TestHelpers.csproj" />
   </ItemGroup>
 
 </Project>
