Add reference to application project for TestHelpers

--- a/tests/TestHelpers/TestHelpers.csproj
+++ b/tests/TestHelpers/TestHelpers.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Core\Core.csproj" />
+    <ProjectReference Include="..\..\src\Application\Application.csproj" />
   </ItemGroup>
 
 </Project>
